# sparkx

./: .gitignore  7  Cargo.toml  README.md  bench_tmp.sh  bench_tmp2.sh  build_datasets.sh  datasets_size.csv  plot_hk_relax_results.py  plot_hyperball_results.py  plot_massif.py  random_dna_seq.py  time_bench.sh
.cargo/: config.toml
.test_cache/exact_values/: exactclosenesscentrality_0cf9da4f77b665daf37a8965a189062526828eb775e90219d5b6f778f0aeface.mmap  exactclosenesscentrality_115ceff0dc5168dcd9a9bb302a829532a5ee6cd8416e78390e88d8c6d0df6ccb.mmap  exactclosenesscentrality_17c3346d92f1fee9a65bd181742317cc7260308b1703363d876fc448960876d0.mmap  exactclosenesscentrality_39974da593e7233837a8a1e7f3c05cdd666a82ae08fd2230e7b5cd899817d09c.mmap  exactclosenesscentrality_43d29a7dd8dedfe4233cf1198631494e82211ccf0610b9385802da312b6b9c5d.mmap  exactclosenesscentrality_46dfbb599cc933be7aca48553950fc09d8418d0cecb287a2598df9df16821730.mmap  exactclosenesscentrality_5013817c269e634c07b3adc5178df93b89f991de411b2cf94e6a3d33b80f063f.mmap  exactclosenesscentrality_58b8f9356a7507a360fd2d4fd49b13e22cc7cc4f1a69632c7c54cc2341edd608.mmap  exactclosenesscentrality_5d7c1d1f4d26f14ed0ec5409cb3b4262683afdfb5da849125a5467f657d8f403.mmap  exactclosenesscentrality_69aecb5a254c524d5f13ade933185292e4cb3714726a2bb7af9b116c92dcd5a1.mmap  exactclosenesscentrality_756bdc8e8313206f68ea9105d28f372580e54fad45dad7dd4c784bcd900a7e04.mmap  exactclosenesscentrality_8541c6efbe8baac7bf1d59842dc53a165acb78433daaee23e64b5fc4cdf06640.mmap  exactclosenesscentrality_8d659dcc45065859a56db8db8a611637349e7185ef1432e9c048b87fad676524.mmap  exactclosenesscentrality_9173baece72a0caf57475f54a71194c431ab89c504a37e1109a3b5576135c363.mmap  (+8 more)
derive_macros/: Cargo.toml
main/: Cargo.toml  README.md  build_datasets.sh  dataset_urls.txt  datasets_size.csv  gen_dbg_mtx.py  massif.out.1196291  mem_bench.sh  plot_hyperball_results.py  plot_massif.py  plot_massif_adjust.py  plot_results.py  summarize_louvain.py  time_bench.sh
main/.cargo/: config.toml
main/.test_cache/exact_values/: exactclosenesscentrality_09a6a9c790308b9151583cfc76409dbbcafc39ce794c6690ddd912917d337cc6.mmap  exactclosenesscentrality_0aae45d9771d0ec494e7c96febc77aaf7f014690e92870a58faf7ac3140b3876.mmap  exactclosenesscentrality_2abc25afee2555c703c45bddcd5a76bf8998693c36c8b2da175dd4d56980bb45.mmap  exactclosenesscentrality_50c1c50331c7606232513359397e4bec4cf812270033177a154cd55c3eaf5562.mmap  exactclosenesscentrality_66dd495873b5718fbc217ff8e1e1537f9b98d7bee4be42089640e89b580e32cd.mmap  exactclosenesscentrality_732707d720aa1c3029e1113311788fe928b86e1ca6fe9904bff1966478a1ef6f.mmap  exactclosenesscentrality_96b6a60f76c74624c3fe04c8d25234204160ffd11e6ff99ff4acfac6a0c6c2bd.mmap  exactclosenesscentrality_c1293068e3d79526f68a400c26f63a8e32fda2d461841ffa92f4c71ed70b4f0a.mmap
main/artifacts/measurements/: ggcat_1_5.lz4_20250907T152119Z.cg.meta.json  ggcat_1_5.lz4_20250907T152152Z.cg.meta.json  ggcat_1_5.lz4_20250907T152153Z.cg.meta.json  ggcat_1_5.lz4_20250907T152154Z.cg.meta.json
main/benches/: algo_batagelj_zaversnik.rs  algo_burkhardt_et_al.rs  algo_gve_louvain.rs  algo_hierholzer.rs  algo_hk_relax.rs  algo_hyperball.rs  algo_liu_et_al.rs  algo_pkt.rs
main/criterion-benches/: Cargo.toml
main/criterion-benches/src/: lib.rs
main/derive_macros/: Cargo.toml
main/massif_scatter/: target_0_scatter_VE.csv  target_10_scatter_VE.csv  target_1_scatter_VE.csv  target_2_scatter_VE.csv  target_3_scatter_VE.csv  target_4_scatter_VE.csv  target_5_scatter_VE.csv  target_6_scatter_VE.csv  target_7_scatter_VE.csv  target_8_scatter_VE.csv  target_9_scatter_VE.csv
main/src/: generic_edge.rs  generic_memory_map.rs  lib.rs  main.rs  node.rs  shared_slice.rs  test_common.rs  utils.rs
main/src/centralities/: exact.rs  hyper_ball.rs  mod.rs
main/src/communities/: approx_dirichlet_hkpr.rs  gve_louvain.rs  hk_relax.rs  mod.rs
main/src/graph/: cache.rs  edge.rs  export_induced_subgraph.rs  export_rustworkx_core.rs  graph_miscelanious.rs  impl_algos.rs  impl_csc.rs  impl_miscelanious.rs  impl_partition.rs  impl_reciprocal_edges.rs  impl_traits.rs  label.rs  mod.rs  partition.rs  petgraph_export.rs  reciprocal_edges.rs  test_utils.rs  utils.rs
main/src/graph/cache/: ggcaat_parser.rs  ggcat_parser.rs  impl_metadata.rs  impl_sort.rs  mod.rs  mtx_parser.rs  nodes_edges_parser.rs  parser_mtx.rs  utils.rs
main/src/graph/cache/parser_ggcat/: mod.rs
main/src/graph/cache/parser_mtx/: mod.rs  producers.rs
main/src/graph/cache/parser_nodes_edges/: mod.rs
main/src/k_core/: batagelj_zaversnik.rs  liu_et_al.rs  mod.rs
main/src/k_truss/: burkhardt_et_al.rs  clustering_coefficient.rs  mod.rs  pkt.rs  triangles.rs
main/src/trails/: bfs.rs  bfs_visit.rs  dfs.rs  dfs_visit.rs  euler_trail.rs  hierholzer.rs  mod.rs
main/xtask/: Cargo.toml
main/xtask/artifacts/measurements/: ggcat_1_5.lz4_20250908T120154Z.cg.meta.json  ggcat_1_5.lz4_20250908T120644Z.cg.meta.json  ggcat_1_5.lz4_20250908T120707Z.cg.meta.json  ggcat_1_5.lz4_20250908T120734Z.cg.meta.json  ggcat_1_5.lz4_20250908T120751Z.cg.meta.json  ggcat_1_5.lz4_20250908T120904Z.cg.meta.json  ggcat_1_5.lz4_20250908T120924Z.cg.meta.json  ggcat_1_5.lz4_20250908T120949Z.cg.meta.json  ggcat_1_5.lz4_20250908T121108Z.cg.meta.json  ggcat_1_5.lz4_20250908T121111Z.cg.meta.json  ggcat_1_5.lz4_20250908T121144Z.cg.meta.json
main/xtask/src/: main.rs
src/: abstract_graph.rs  generic_memory_map.rs  main.rs  node.rs  shared_slice.rs  test_common.rs  utils.rs
(+30 files in other folders)
