[package]
name = "sparkx"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["xtask", "."]

[profile.bench_cache]
inherits = "dev"  # or "dev"
debug = 2         # generate full debuginfo
strip = false     # ensure it isn't stripped after build
opt-level = 3
lto = "thin"
codegen-units = 1

[patch.crates-io]
hyperloglog-rs = { git = 'https://github.com/LucaCappelletti94/hyperloglog-rs.git', rev = '77e0350' }

[features]
default = ["mtx", "ggcat", "nodes_edges"]
# no extra dependencies, just a switch you to pass on to `cargo`
bench = []
mtx = []
ggcat = []
nodes_edges = []
iter_with_offset = []
rayon = ["dep:rayon"]
petgraph = []
rustworkx = []

[dependencies]
graph_derive = { path = "./derive_macros/" }
bytemuck = { version = "1.23.0", features = ["derive"] }
bitfield = "0.19.1"
clap = { version = "4.5.39", features = ["derive"] }
lz4 = "1.24.0"
memmap2 = "0.9.7"
rand = "0.9.1"
static_assertions = "1.1.0"
fst = "0.4"
regex-automata = { version = "0.1.9", features = ["transducer"] }
regex = "1"
glob = "0.3.2"
crossbeam = "0.8.4"
ordered-float = "5.0.0"
rand_distr = "0.5.1"
num_cpus = "1.17.0"
sys-info = "0.9.1"
hyperloglog-rs = "0.1.56"
paste = "1.0.15"
sha2 = "0.10.9"
portable-atomic = { version = "1.11.1", features = ["float"] }
rustworkx-core = { version = "0.16.0" }
petgraph = "0.8.2"
smallvec = "1.15.1"
rayon = { version = "1.11.0", optional = true }
dashmap = "6.1.0"
