[package]
name = "tool"
version = "0.1.0"
edition = "2024"

[dependencies]
graph_derive = { path = "../macros" }
bytemuck = { version = "1.23.0", features = ["derive"] }
bitfield = "0.19.1"
clap = { version = "4.5.39", features = ["derive"] }
lz4 = "1.24.0"
memmap2 = "0.9.7"
rand = "0.9.1"
rustworkx-core = "0.16.0"
static_assertions = "1.1.0"
zerocopy = { version = "0.8.25", features = ["derive"] }
fst = "0.4"
regex-automata = { version = "0.1.9", features = ["transducer"] }
regex = "1"
glob = "0.3.2"
crossbeam = "0.8.4"
ordered-float = "5.0.0"
rand_distr = "0.5.1"
tempfile = "3.20.0"
num_cpus = "1.17.0"
sys-info = "0.9.1"
hyperloglog-rs = "0.1.56"
atomic_float = "1.1.0"
paste = "1.0.15"
